--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "Buzz-Word-Bingo",
   "version": "1.0.0",
   "description": "**About the game**",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,4 +18,12 @@
     "url": "https://github.com/jhoun/Buzz-Word-Bingo/issues"
   },
   "homepage": "https://github.com/jhoun/Buzz-Word-Bingo#readme"
-}
+},
+"xo": {
+    "esnext": true,
+    "space": true,
+    "globals": [
+      "window"
+    ]
+  }
+
